# flow-memory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_REPORT.md  BUILD_REPORT_NEURAL_GPU_EVIDENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.compute-market  FLOW_MEMORY_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.compute-market.yml  docker-compose.yml  pyproject.toml  render.yaml  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: cognitive_benchmark.py  neural_agent_policy_benchmark.py  neural_appearance_free_motion_benchmark.py  neural_memory_retrieval_benchmark.py  neural_plan_scoring_benchmark.py  neural_world_model_prediction_benchmark.py  perception_benchmark.py  rl_adversarial_env_benchmark.py  rl_economy_market_benchmark.py  rl_env_throughput_benchmark.py  rl_policy_comparison_benchmark.py  rl_safety_gate_benchmark.py  rl_training_smoke_benchmark.py
configs/: agent.alpha.yaml  local-agent.yaml
contracts/: AgentDIDRegistry.sol  AgentRegistry.sol  AgentTreasury.sol  AttestationRegistry.sol  CapabilityRegistry.sol  DelegationRegistry.sol  DisputeResolver.sol  Marketplace.sol  Reputation.sol  ReputationSBT.sol  SlashingRegistry.sol  TaskEscrow.sol  TaskMarketplace.sol
dashboard/: README.md  package-lock.json  package.json
docker/: Dockerfile
docs/: ADVERSARIAL_ECONOMY_SIMULATION.md  AGENT_BUILDER.md  AGENT_COLLABORATION_PROTOCOL.md  AGENT_ECONOMY.md  AGENT_ECONOMY_QUICKSTART.md  AGENT_ECONOMY_V3.md  AGENT_GENESIS.md  AGENT_GENOMES.md  AGENT_INTERNET.md  AGENT_OWNERSHIP_MODEL.md  AGENT_REPUTATION.md  AGENT_SKILL_MATCHER.md  AI_AGENT_LAYER.md  API.md  API_AGENT_LAUNCH.md  API_AUTH.md  API_ERROR_CONTRACT.md  API_RL.md  API_SERVER.md  API_SNAPSHOT.json  API_VISUAL.md  APPEARANCE_FREE_MOTION.md  ARCHITECTURE.md  AUDIT_REPLAY.md  AUTONOMOUS_AGENT_ECONOMY_V2.md  BASE_AGENT_ECONOMY.md  BASE_SEPOLIA_DEPLOYMENT.md  BYOK_MODEL_KEYS.md  CAPACITY_MARKET.md  CLEAN_CLONE_VALIDATION.md  CLOUD_GPU_SETUP.md  COMPUTE_MARKET.md  CONTRACT_SECURITY_TESTS.md  DASHBOARD.md  DATALOG_POLICY_ENGINE.md  DORSAL_STREAM.md  ECONOMY_V2.md  EXPERIENCE_GRAPH.md  EXPERIMENTAL_LANGUAGES.md  FAQ.md  (+96 more)
examples/: agent_dispute_slashing_demo.py  agent_economy_adversarial_sim_demo.py  agent_economy_v2_demo.py  agent_economy_v3_demo.py  agent_genesis_mira.flow  agent_improves_with_memory_demo.py  agent_improves_with_rl_demo.py  agent_internet_mira.flow  agent_learning_loop_demo.py  agent_profile_demo.py  agent_reliability_gauntlet_demo.py  compute_market_demo.py  constitutional_memory_demo.py  custom_tool.py  economic_agent.py  economic_marketplace.py  economic_task.py  first_agent.py  flowlang_agent.flow  flowlang_compile_demo.py  flowlang_economy_agent.flow  flowlang_economy_demo.py  flowlang_policy_block_demo.flow  flowlang_runtime_demo.py  flowlang_skill_agent.flow  launch_agent_api_demo.py  launch_agent_cli_demo.py  launch_agent_economy_task_demo.py  launch_flowlang_agent_demo.py  launch_multi_agent_network_demo.py  launch_neural_agent_demo.py  launch_rl_trained_agent_demo.py  live_ops_market_observer.flow  live_ops_memory_scout.flow  live_ops_research_agent.flow  live_research_agent.flow  local_api_demo.py  market_observer_agent.flow  marketplace_demo.py  memory_scout_agent.flow  (+36 more)
flow_memory/: __init__.py
foundry/: foundry.toml
policies/: safety.rego
release_evidence/: audit-events.jsonl  audit_export.ndjson  audit_export.ndjson.checkpoint.json  compute_market_hardening_evidence.json  event-log-replay.sqlite3  event-log.sqlite3  live_audit_export.ndjson  live_audit_export.ndjson.checkpoint.json  public_alpha_launch.json  public_alpha_launch_finalizer.json  utility_evidence.json
rules/: memory_consolidation.dl  policy.dl  reputation.dl  slashing.dl  task_eligibility.dl
schemas/: agent_manifest.schema.json  event.schema.json  plan.schema.json
script/: Deploy.s.sol
scripts/: apply_retention_policy.py  backup_storage.py  base_sepolia_dry_run.py  check_compute_market_production.py  check_dashboard_api.py  check_release_api.py  check_visual_api.py  clean_clone_validation.py  cloud_gpu_validate.py  compare_gpu_runs.py  compute_market.py  deploy_compute_market_public_level1.ps1  deploy_compute_market_render_level1.py  deploy_render_compute_market.ps1  export_api_snapshot.py  export_contract_addresses.py  export_contract_registry.py  export_dependency_inventory.py  export_event_log.py  export_payment_ledger_demo.py  export_public_alpha_launch_evidence.py  export_release_evidence.py  (+52 more)
(+1112 files in other folders)
