[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-memory"
version = "0.2.0"
description = "Open-source cognitive agent OS with dual-stream perception, layered memory, safety gates, and economic autonomy primitives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Flow Memory Contributors" }]
keywords = ["agents", "memory", "ai", "cognitive-architecture", "blockchain", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]
ml = ["torch>=2.2", "numpy>=1.26"]
memory = ["redis>=5.0", "qdrant-client>=1.9", "neo4j>=5.20"]
postgres = ["psycopg[binary,pool]>=3.1"]
compute-market-live = ["psycopg[binary,pool]>=3.1", "redis>=5.0"]
web3 = ["web3>=6.20", "eth-account>=0.11"]
langgraph = ["langgraph>=0.2"]
all = [
  "torch>=2.2", "numpy>=1.26",
  "redis>=5.0", "qdrant-client>=1.9", "neo4j>=5.20",
  "psycopg[binary,pool]>=3.1",
  "web3>=6.20", "eth-account>=0.11", "langgraph>=0.2"
]

[project.scripts]
flow-memory = "flow_memory.cli:main"
flow-memory-api = "flow_memory.api.server_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:ddtrace -p no:ddtrace.pytest_bdd -p no:ddtrace.pytest_benchmark"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Non-production benchmark scripts intentionally bootstrap src/ and use compact
# single-file harness formatting; production code remains fully linted.
"benchmarks/*.py" = ["E401", "E402", "E701", "E702"]
"scripts/*.py" = ["E401", "E402", "E701", "E702", "F401"]
"examples/*.py" = ["E401", "E402", "E701", "E702"]
# Legacy neural/RL research modules are outside Compute Market production target;
# they remain covered by tests but are quarantined for compact historical script style.
"src/flow_memory/neural/**/*.py" = ["E401", "E701", "E702"]
"src/flow_memory/rl/**/*.py" = ["E701", "E702", "F841"]
"src/flow_memory/protocols/mcp.py" = ["F811"]

[tool.mypy]
python_version = "3.10"
strict = true
# Production mypy target checks explicit packages and skips legacy imported
# experimental packages that are outside Compute Market production readiness.
follow_imports = "skip"
ignore_missing_imports = true
