[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-memory"
version = "0.2.0"
description = "Open-source cognitive agent OS with dual-stream perception, layered memory, safety gates, and economic autonomy primitives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Flow Memory Contributors" }]
keywords = ["agents", "memory", "ai", "cognitive-architecture", "blockchain", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]
ml = ["torch>=2.2", "numpy>=1.26"]
memory = ["redis>=5.0", "qdrant-client>=1.9", "neo4j>=5.20"]
web3 = ["web3>=6.20", "eth-account>=0.11"]
langgraph = ["langgraph>=0.2"]
x402 = ["x402>=2.11.0"]
all = [
  "torch>=2.2", "numpy>=1.26",
  "redis>=5.0", "qdrant-client>=1.9", "neo4j>=5.20",
  "web3>=6.20", "eth-account>=0.11", "langgraph>=0.2",
  "x402>=2.11.0",
]

[project.scripts]
flow-memory = "flow_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:ddtrace -p no:ddtrace.pytest_bdd -p no:ddtrace.pytest_benchmark"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
